--- a/public/admin-lte/css/app.css
+++ b/public/admin-lte/css/app.css
@@ -41,6 +41,8 @@
     font-size: 16px;
 }
 
+h1 span.course{margin-left:80px}
+
 .form-signin .form-control:focus {
     z-index: 2;
 }
@@ -76,7 +78,7 @@
 }
 
 a.profile-picture {
-    width: 100% px;
+    width: 100%;
     height: 128px;
     display: block;
 }
