added mockup model

--- a/views/admin-lte/catalogs/rightMenu.ejs
+++ b/views/admin-lte/catalogs/rightMenu.ejs
@@ -9,7 +9,7 @@
             <div class="modal-body">
                 <ul class="nav nav-pills nav-stacked">
                     <li class="header rightMenu"></li>
-                    <li><a href="javascript:;" ng-click="call('createSubTopic', {topic: 'Web Tech'})"> Create Sub Topic </a></li>
+                    <li><a href="javascript:;" ng-click="call('createSubTopic')"> Create Sub Topic </a></li>
                 </ul>
             </div>
         </div>
