--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -6,6 +6,7 @@
 <script src="/xeditable/xeditable.min.js" type="text/javascript"></script>
 <script src="/angular/angular-route.min.js"></script>
 <script src="/angular/angular-resource.min.js"></script>
+<script src="/d3/d3.min.js"></script>
 <script src="/angular/courseMapper.js"></script>
 <!-- AdminLTE App -->
 <script src="/admin-lte/js/app.min.js" type="text/javascript"></script>
