add centre and recursive category

--- a/views/admin-lte/header.ejs
+++ b/views/admin-lte/header.ejs
@@ -15,9 +15,11 @@
     <link href="/admin-lte/css/AdminLTE.min.css" rel="stylesheet" type="text/css" />
     <link href="/admin-lte/css/skin-blue.min.css" rel="stylesheet" type="text/css" />
     <link href="/admin-lte/css/app.css" rel="stylesheet" type="text/css" />
-    <link href="/d3/tree.css" rel="stylesheet" type="text/css" />
 
-    <link href="/xeditable/xeditable.css" rel="stylesheet">
+
+    <!--<link href="/xeditable/xeditable.css" rel="stylesheet">
+    <link href="/d3/tree.css" rel="stylesheet" type="text/css" />
+    <link href="/jquery/jsplumb.css" rel="stylesheet">-->
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
