--- a/views/admin-lte/index.ejs
+++ b/views/admin-lte/index.ejs
@@ -1,13 +1,62 @@
 <% include header %>
+<style>
+    .w {
+        padding: 16px;
+        position: absolute;
+        z-index: 4;
+        border: 1px solid #2e6f9a;
+        box-shadow: 2px 2px 19px #e0e0e0;
+        -o-box-shadow: 2px 2px 19px #e0e0e0;
+        -webkit-box-shadow: 2px 2px 19px #e0e0e0;
+        -moz-box-shadow: 2px 2px 19px #e0e0e0;
+        -moz-border-radius: 8px;
+        border-radius: 8px;
+        opacity: 0.8;
+        filter: alpha(opacity=80);
+        cursor: move;
+        background-color: white;
+        font-size: 11px;
+        -webkit-transition: background-color 0.25s ease-in;
+        -moz-transition: background-color 0.25s ease-in;
+        transition: background-color 0.25s ease-in;
+        max-width:100px;
+    }/*
+    #opened {
+        left: 10em;
+        top: 5em;
+    }
+
+    #phone1 {
+        left: 35em;
+        top: 12em;
+    }
+
+    #inperson {
+        left: 12em;
+        top: 23em;
+    }
+
+    #phone2 {
+        left: 28em;
+        top: 24em;
+    }
+
+    #rejected {
+        left: 10em;
+        top: 35em;
+    }*/
+
+</style>
 <div class="wrapper">
 
     <!-- Header Navbar -->
     <% include mainMenu %>
 
     <!-- Content Wrapper. Contains page content -->
-    <div class="content-wrapper">
+    <div class="content-wrapper" ng-controller="HomePageController">
 
-        <div class="row row-centered">
+        <!--<div ngCloak ng-hide="hideSlider" class="row row-centered" style="display: none;" >-->
+        <div class="row row-centered" style="display: none;" >
             <div class="col-lg-12 col-centered">
 
                 <div id="carousel-generic" class="carousel slide" data-ride="carousel">
@@ -15,14 +64,14 @@
                         <li data-target="#carousel-generic" data-slide-to="0" class="active"></li>
                         <li data-target="#carousel-generic" data-slide-to="1" class=""></li>
                     </ol>
-                    <a class="btn btn-block btn-primary btn-flat btn-slide hidden-xs">Start Collaborating!</a>
+
+                    <a class="btn btn-block btn-primary btn-flat btn-slide hidden-xs" ng-click="setHideSlider()">Let's Start!</a>
 
                     <div class="carousel-inner">
                         <div class="item active">
                             <img src="/img/sliders/slider_3.png" alt="">
 
                             <div class="carousel-caption">
-
                             </div>
                         </div>
                         <div class="item">
@@ -43,77 +92,27 @@
                 <a class="btn btn-block btn-primary btn-flat visible-xs">Start a course map!</a>
             </div>
         </div>
-
         <!-- Main content -->
+
+        <script type="text/ng-template"  id="tree_item_renderer.html">
+            <div class="w" id="{{data.slug}}" >
+                {{data.category}}
+                <div ng-repeat="data in data.subCategories" ng-include="'tree_item_renderer.html'" >
+                </div>
+            </div>
+        </script>
+
         <section class="content" ng-controller="CategoryListController as categoryList">
 
             <div class="container">
-                <div class="row row-centered">
-                    <div class="col-sm-6 col-lg-6 col-centered">
-                        <div class="text-center">
-                            <h1>Welcome to CourseMapper,
-                                let's start by going through our categories
-                            </h1>
-                        </div>
-                    </div>
-                </div>
-                <div class="row row-centered">
-                    <div class="col-xs-12 col-lg-9 col-centered">
-                        <div class="content">
-                            <div class="col-xs-12 col-sm-4 col-lg-4" ng-repeat="category in categories.categories">
-                                <div class="box box-solid">
-                                    <div class="box-header with-border">
-                                        <h3 class="box-title"><a href="/catalogs/courses/category/{{category.slug}}">{{category.category}}</a>
-                                        </h3>
-                                    </div>
-                                    <!-- /.box-header -->
-                                    <div class="box-body clearfix hidden-xs">
-                                        <img class="hidden-xs" src="/img/category_placeholder.png" style="width: 100%"
-                                             alt="category picture">
-                                    </div>
-                                    <!-- /.box-body -->
-                                    <div class="box-footer no-border">
-                                        20 courses available
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xs-12 col-sm-4 col-lg-4" ng-repeat="category in categories.categories">
-                                <div class="box box-solid">
-                                    <div class="box-header with-border">
-                                        <h3 class="box-title"><a href="/catalogs/courses/category/{{category.slug}}">{{category.category}}</a>
-                                        </h3>
-                                    </div>
-                                    <!-- /.box-header -->
-                                    <div class="box-body clearfix hidden-xs">
-                                        <img class="hidden-xs" src="/img/category_placeholder.png" style="width: 100%"
-                                             alt="category picture">
-                                    </div>
-                                    <!-- /.box-body -->
-                                    <div class="box-footer no-border">
-                                        20 courses available
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <div class="category-map" id="category-map" >
 
-                <div class="row row-centered">
-                    <div class="col-lg-4 col-centered">
-                        <div class="text-center">
-                            <h1>Or browse through our tag cloud:
-                            </h1>
-
-                            <p>&nbsp;</p>
-                        </div>
+                    <div ng-repeat="data in categories.categories" ng-include="'tree_item_renderer.html'" on-finish-render="jsTreeInit">
                     </div>
-                </div>
 
-                <div class="row row-centered">
-                    <img src="/img/tag_cloud.png">
+                    <div class="w" id="center" ng-style="{left:center.x, top:center.y}">Center</div>
                 </div>
             </div>
-
 
         </section>
         <!-- /.content -->
@@ -122,4 +121,55 @@
 
 </div><!-- ./wrapper -->
 <% include jsfooter %>
+<script>
+    jQuery(document).ready(function(){
+
+    });
+
+    function getCenter(){
+    }
+
+</script>
 <% include footer %>
+<!--
+<script>
+    {
+        categories: [
+            {
+                _id: "5530bf0ee5a9e0dd261059b9",
+                updatedAt: "2015-04-17T08:06:38.549Z",
+                slug: "Math",
+                category: "Math",
+                parentCategory: null,
+                __v: 0,
+                tags: [ ],
+                subCategories: [
+                    {
+                        _id: "5565966edfccccb85c3b22f8",
+                        updatedAt: "2015-05-27T10:03:26.419Z",
+                        slug: "test",
+                        category: "test",
+                        parentCategory: "5530bf0ee5a9e0dd261059b9",
+                        __v: 0,
+                        tags: [ ],
+                        subCategories: [ ]
+                    }
+                ]
+            },
+            {
+                _id: "5530bf15e5a9e0dd261059ba",
+                updatedAt: "2015-04-17T08:06:45.274Z",
+                slug: "IT",
+                category: "I.T",
+                parentCategory: null,
+                __v: 0,
+                tags: [
+                    "5530c18029d64f5129d44c3d",
+                    "5530c18a29d64f5129d44c3e",
+                    "5530c19629d64f5129d44c3f"
+                ],
+                subCategories: [ ]
+            }
+        ]
+    }
+</script>-->
