--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -1,6 +1,9 @@
 
 <!-- REQUIRED JS SCRIPTS -->
 <script src="/jquery/jquery.min.js"></script>
+<script src="/jquery/jquery-ui.min.js"></script>
+<script src="/jquery/jquery.ui.touch-punch.min.js"></script>
+<script src="/jquery/jquery.jsPlumb-1.7.5.js"></script>
 <script src="/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 <script src="/angular/angular.min.js" type="text/javascript"></script>
 <script src="/xeditable/xeditable.min.js" type="text/javascript"></script>
