--- a/public/admin-lte/css/app.css
+++ b/public/admin-lte/css/app.css
@@ -363,3 +363,49 @@ li.active .ionicons{
 li.disabled i{
     opacity: 0.2;
 }
+
+.w,.center-category {
+    padding: 16px;
+    position: absolute; 
+    border: 2px solid #3C8DBC;
+    box-shadow: 2px 2px 19px #e0e0e0;
+    border-radius: 6px;
+    cursor: default;
+    background-color: white;
+    font-size: 12px;
+    transition: background-color 0.25s ease-in;
+    text-align: center;
+    text-transform: capitalize;
+    font-weight: 500;
+}
+
+.center-category{
+    width:280px;
+    height: 200px!important;
+    display: block;
+    background: #3C8DBC;
+    color:white;
+}
+
+[data-shape=Rectangle] {
+    width:auto;
+    min-width: 150px;
+    height:auto;
+}
+
+.box.box-primary.dropdown-menu{
+    width: auto;
+    position: absolute;
+    box-shadow: 0 0px 10px grey;
+    top: 0px;
+}
+
+.dropdown-menu.category li{
+    padding-left: 14px;
+    padding-right: 14px;
+    text-transform: capitalize;
+}
+
+ul.dropdown-menu.category{
+    z-index:10;
+}
