--- a/views/admin-lte/index.ejs
+++ b/views/admin-lte/index.ejs
@@ -1,30 +1,5 @@
 <% include header %>
 <style>
-    .w,.center-category {
-        padding: 16px;
-        position: absolute;
-        z-index: 4;
-        border: 1px solid #2e6f9a;
-        box-shadow: 2px 2px 19px #e0e0e0;
-        -o-box-shadow: 2px 2px 19px #e0e0e0;
-        -webkit-box-shadow: 2px 2px 19px #e0e0e0;
-        -moz-box-shadow: 2px 2px 19px #e0e0e0;
-        -moz-border-radius: 8px;
-        border-radius: 8px;
-        opacity: 0.8;
-        filter: alpha(opacity=80);
-        cursor: move;
-        background-color: white;
-        font-size: 11px;
-        -webkit-transition: background-color 0.25s ease-in;
-        -moz-transition: background-color 0.25s ease-in;
-        transition: background-color 0.25s ease-in;
-        max-width:100px;
-    }
-    [data-shape=Rectangle] {
-        width:210px;
-        height:70px;
-    }
 
 
 </style>
@@ -76,9 +51,26 @@
         <!-- Main content -->
 
         <script type="text/ng-template"  id="tree_item_renderer.html">
-            <div class="w" id="{{data.slug}}" data-shape="Rectangle" ng-style="{left:data.fromCenter.x + center.x, top:data.fromCenter.y+center.y}">
-                {{data.category}}
-            </div>
+                <div class="w" id="{{data.slug}}" data-shape="Rectangle" ng-style="{left:data.fromCenter.x + center.x, top:data.fromCenter.y+center.y}" data-toggle="dropdown" data-hover="dropdown">
+
+                    {{data.category}} <b class="caret"></b>
+
+                        <ul class="dropdown-menu box box-primary category"  >
+                            <li><b>{{data.category}}</b></li>
+                            <li class="divider"></li>
+                            <li> total 10 courses </li>
+                            <li> total 250 nodes </li>
+                            <li><h5><b>Top Courses</b></h5></li>
+                            <li><a tabindex="-1" href="#">a</a></li>
+                            <li><a tabindex="-1" href="#">b</a></li>
+                            <li><a tabindex="-1" href="#">c</a></li>
+                            <li class="divider"></li>
+                            <li><a tabindex="-1" href="#">Browse Courses</a></li>
+                        </ul>
+
+                    </div>
+                </div>
+
             <div ng-repeat="data in data.subCategories" ng-include="'tree_item_renderer.html'" >
             </div>
         </script>
@@ -91,7 +83,9 @@
                     <div ng-repeat="data in categories" ng-include="'tree_item_renderer.html'" on-finish-render="jsTreeInit">
                     </div>
 
-                    <div class="center-category" id="center" data-shape="Rectangle" ng-style="{left:center.x, top:center.y}">Center</div>
+                    <div class="center-category" id="center" data-shape="Rectangle" ng-style="{left:center.x, top:center.y}">
+                        <h4>CourseMapper</h4>
+                    </div>
                 </div>
             </div>
 
